--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,13 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+
+# aleph alpha env file
+.env
+*.mov
+*.mp4
+*.avi
+/tmp_processed
+/tmp_raw
+*.json
