--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,3 +45,11 @@ repos:
 #     rev: 6.1.1
 #     hooks:
 #     -   id: pydocstyle
+
+repos:
+  - repo: https://github.com/python-poetry/poetry
+    rev: ''  # add version here
+    hooks:
+      - id: poetry-check
+      - id: poetry-lock
+        args: ["-f", "requirements.txt", "-o", "requirements.txt"]
