--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,12 @@ python-multipart = "^0.0.5"
 torch = "^1.12.1"
 pandas = "^1.5.0"
 pre-commit = "^2.20.0"
+hydra-core = "^1.2.0"
+pytorch-lightning = "^1.7.7"
+braceexpand = "^0.1.7"
+webdataset = "^0.2.26"
+librosa = "^0.9.2"
+sentencepiece = "^0.1.97"
 
 
 [build-system]
