--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@
 # # See https://pre-commit.com/hooks.html for more hooks
 repos:
 -   repo: https://github.com/myint/autoflake
-    rev: v1.4
+    rev: v2.0.0
     hooks:
     -   id: autoflake
         args:
@@ -10,7 +10,7 @@ repos:
         - --remove-all-unused-imports
 
 -   repo: https://github.com/psf/black
-    rev: 22.6.0
+    rev: 22.12.0
     hooks:
     -   id: black
         args:
@@ -18,7 +18,7 @@ repos:
 
 
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.3.0
+    rev: v4.4.0
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
@@ -30,7 +30,7 @@ repos:
     -   id: detect-private-key
 
 -   repo: https://github.com/PyCQA/flake8
-    rev: 4.0.1
+    rev: 6.0.0
     hooks:
     -   id: flake8
         args:
@@ -47,6 +47,6 @@ repos:
 #     -   id: pydocstyle
 
 -   repo: https://github.com/python-poetry/poetry
-    rev: ''  # add version here
+    rev: '1.3.0'  # add version here
     hooks:
         - id: poetry-check
