--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,11 @@ repos:
         #- --in-place
         - --remove-all-unused-imports
 
+-   repo: https://github.com/asottile/reorder_python_imports
+    rev: v3.9.0
+    hooks:
+    -   id: reorder-python-imports
+
 -   repo: https://github.com/psf/black
     rev: 22.12.0
     hooks:
