--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ timm = "^0.6.11"
 transformers = "^4.23.1"
 opencv-python = "^4.6.0.66"
 python-multipart = "^0.0.5"
-torch = "^1.12.1"
+torch = "1.12.0"
 pandas = "^1.5.0"
 pre-commit = "^2.20.0"
 hydra-core = "^1.2.0"
@@ -32,3 +32,7 @@ cython = "^0.29.32"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[settings]
+known_third_party = ["PIL", "aleph_alpha_client", "cv2", "dotenv", "fastapi", "pandas", "pydantic", "torch", "transformers"]
