--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -101,3 +101,9 @@ repos:
     -   id: poetry-lock
     -   id: poetry-export
         args: ["-f", "requirements.txt", "-o", "requirements.txt"]
+
+-   repo: https://github.com/Lucas-C/pre-commit-hooks-safety
+    rev: v1.3.1
+    hooks:
+    -   id: python-safety-dependencies-check
+        files: pyproject.toml
